# inventory-management-system

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yaml  locustfile.py  main.py  pyproject.toml
Prueba_1/: bruno.json  get_product_by_id.bru  primera prueba.bru
alembic/: env.py
alembic/versions/: 0258b85eff43_fix_base_import.py  2c74b7d66483_fix_tables.py  394d940de0de_create_products_table.py  51e5edce79fe_migration_creating_tables.py  557239522622_corrección_sin_eliminar_inventory_ni_.py  64595fa39753_migration_with_new_base.py  6dfebb9d8078_add_check_constraint_for_positive_price.py  900b30c1110e_recreating_initial_migration.py  90c2990021ca_migration_with_new_base2.py  9d8652bf70e2_change_product_and_inventory_id_to_uuid.py  9e703f26079d_create_products_table.py  caee85aa0b98_corrige_product_id_y_crea_movements_.py  d6e9ac5fda34_remove_stock_column_from_products.py  dd26e7936962_fix_nullable_fields_in_movements.py  e8fa6c1e6cc8_recreating_tables.py  fc6e0ad1cd7d_add_stock_column_to_products.py
inventory_management_system/: config.py  main.py
inventory_management_system/core/: config.py
inventory_management_system/db/: crud.py  database.py  init_db.py  migrations.py  models.py
inventory_management_system/models/: __init__.py  inventory.py  movement.py  product.py
inventory_management_system/schemas/: inventory.py  movement.py  product.py
inventory_management_system/services/: inventory_service.py  movement_service.py  product_service.py
inventory_management_system/tests/: conftest.py  (+2 more)
(+15 files in other folders)
